# tej-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tej-ai.desktop  tej-gui.sh  tej.bat  tej.sh  tej_ai.py  tej_gui.py
tej/: __init__.py  __main__.py  icon_gen.py  install_desktop.py  main.py
tej/cli/: __init__.py  shell.py
tej/core/: __init__.py  agent.py  engine.py  executor.py  llm_provider.py  mcp_client.py  platform_manager.py  session.py
tej/gui/: __init__.py  app.py  chat.py  dialogs.py  sidebar.py  terminal.py  theme.py
tej/gui/assets/: __init__.py
tej/tools/: __init__.py  parsers.py  registry.py
tej/utils/: __init__.py  config.py  helpers.py
