[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tej"
version = "1.0.0"
description = "Tej AI - AI-Powered Security Tool Orchestrator for Kali Linux & Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["security", "pentesting", "kali-linux", "ai", "hacking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Environment :: Console",
]

[project.scripts]
tej = "tej.main:main"

[project.gui-scripts]
tej-gui = "tej.gui:launch_gui"

[tool.setuptools.packages.find]
include = ["tej*"]
